--- a/MahjongRigRemote/MahjongRigRemote/MahjongRigRemote.csproj
+++ b/MahjongRigRemote/MahjongRigRemote/MahjongRigRemote.csproj
@@ -12,4 +12,15 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="MahjongCore">
+      <HintPath>..\..\..\MahjongCore\MahjongCore\MahjongCore\bin\Debug\MahjongCore.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Model\" />
+    <Folder Include="ViewModel\" />
+  </ItemGroup>
 </Project>
